feat(MyNumber) Continued addition of different types of support. Warning: the test folder has been moved to temporarily ignore all tests.